--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "emailjs": "^4.0.0",
     "framer-motion": "^6.3.15",
     "number-counter": "^1.0.3",
